Update interactive economics exhibit for visual learning
- Enhanced HTML exhibit for economic principle demonstration
- Interactive tool for market behavior visualization
- Practical application of microeconomic concepts
- Visual learning aid for CFA Level I economics curriculum

--- a/Level 1/economics/exhibit31.html
+++ b/Level 1/economics/exhibit31.html
@@ -3,6 +3,7 @@
 <!-- Interactive exhibit demonstrating economic principles and market behavior -->
 <!-- Used for visual learning and practical application of economic concepts -->
 <!-- Part of the comprehensive economics curriculum for CFA Level I preparation -->
+<!-- Updated: October 2025 - Enhanced interactive learning tool -->
 <!-- Build: 1.1.486.0 -->
 <!-- StateVersion: 2.1.1 -->
 <!-- DeploymentMode: Production -->
